# ethernet_enc28j60

./: .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md
examples/stm32f103/: CMakeLists.txt  main.c  uip  uip-conf.h
include/: control.h  enc28j60.h  eth_codec.h  protocols.h  registers.h  rx.h  state.h  tx.h
src/: CMakeLists.txt  control.c  eth_codec.c  init.c  registers.c  rx.c  tx.c
